fixed issue with infowindow where close button covered company name

--- a/public/stylesheets/info_window.css
+++ b/public/stylesheets/info_window.css
@@ -44,6 +44,7 @@ Info window styles
 	font-size: .9em;
 	color: #333;
 	float:right;
+	margin-right: 10px;
 }
 
 .crosshairs{
